# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  bash.txt  cat  export_msh.sh  ft_execute.c  ft_parse.c  main.c  minishell  minishell.drawio  minishell.h  multi_pipe.c  myworknotes.md  neco.txt  new.c  out.txft  out.txt  out3.txt  out4.txt  readme.md  test.txt  test2.txt  text.txt  worklog.md
.metadata/: version.ini
ft_fprintf/: Makefile  fprintf.c  ft_fprintf.h  utils.c  utils2.c
includes/: ast.h  input.h  minishell.h
libft/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ft_atoi.c  ft_atoi_base.c  ft_realloc.c  ft_strcat  ft_strcat.c  ft_strcmp.c  ft_strjoin.c  libft.h
srcs/: .readline.c  exit.c  ft_execute.c  ft_parse.c  history.c  init.c  main.c  main_utils.c  msh_env_list.c  multi_pipe.c  prompt.c  readline.c  signal.c  test
srcs/ast/: .main.c  ast.c  ast.h  ast_free.c  ast_utils.c  executer.c  executer_utils.c  lexer.c  lexer2.c  lexer3.c  lexer_utils.c  main.c  make.sh  my_exec.c  my_exec_utils.c  my_exec_utils2.c  parser.c  parser_utils.c  parser_utils2.c  pipe.c  print_ast.c  print_ast_utils.c  redirection.c  test  testpipe.c  token_check.c  worklog.md
srcs/builtins/: msh_cd.c  msh_clear.c  msh_echo.c  msh_env_list.c  msh_env_utils.c  msh_exit.c  msh_export.c  msh_pwd.c  msh_unset.c
srcs/input/: input.c  input_utils.c  input_utils2.c
tests/: test_builtins.py  test_builtins.sh
tests/builtins/: CMakeLists.txt  gtest_builtins.cpp
tests/env/: CMakeLists.txt  gtest_env.cpp
(+6 files in other folders)
